@todo redundant columns explanation

--- a/draft_one_eda.ipynb
+++ b/draft_one_eda.ipynb
@@ -877,7 +877,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have removed all reduntant columns @todo explainng"
+    "## REMOVING THE REDUNDANT/DUMMY COLUMNS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The columns are deleted because their information has been merged or transformed into new columns, which simplifies the dataset. This process eliminates redundancy and reduces the number of columns, which can make the data easier to work with and less prone to overfitting in machine learning models.\n",
+    "\n",
+    "#### Gender: \n",
+    "The gender_Female, gender_Male, and gender_Other columns are merged into a single gender column (0 for Female, 1 for Male). The original columns are now redundant.\n",
+    "#### Ever Married:\n",
+    "ever_married_Yes and ever_married_No are combined into a single ever_married column (1 for Yes, 0 for No), making the original columns unnecessary.\n",
+    "#### Residence Type:\n",
+    "The one-hot encoded columns for Residence_type_Rural and Residence_type_Urban are merged into residence_type (0 for Rural, 1 for Urban), so the originals are deleted.\n",
+    "#### Work Type:\n",
+    "The work_type_Self-employed column is simplified into work_type_self_employed (1 for Self-employed, 0 otherwise). The original work type columns are no longer needed."
    ]
   },
   {
