feat: add feature engineering, diagramms

--- a/draft_one_eda.ipynb
+++ b/draft_one_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "max           281.590000     97.600000      1.000000  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1428,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1542,7 +1542,7 @@
        "1           0.898230        0.526549                 0.345133  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1556,23 +1556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## REMOVING THE REDUNDANT/DUMMY COLUMNS"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The columns are deleted because their information has been merged or transformed into new columns, which simplifies the dataset. This process eliminates redundancy and reduces the number of columns, which can make the data easier to work with and less prone to overfitting in machine learning models.\n",
-    "\n",
-    "#### Gender: \n",
-    "The gender_Female, gender_Male, and gender_Other columns are merged into a single gender column (0 for Female, 1 for Male). The original columns are now redundant.\n",
-    "#### Ever Married:\n",
-    "ever_married_Yes and ever_married_No are combined into a single ever_married column (1 for Yes, 0 for No), making the original columns unnecessary.\n",
-    "#### Residence Type:\n",
-    "The one-hot encoded columns for Residence_type_Rural and Residence_type_Urban are merged into residence_type (0 for Rural, 1 for Urban), so the originals are deleted.\n",
-    "#### Work Type:\n",
-    "The work_type_Self-employed column is simplified into work_type_self_employed (1 for Self-employed, 0 otherwise). The original work type columns are no longer needed."
+    "We have removed all reduntant columns @todo explainng"
    ]
   },
   {
@@ -1586,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1595,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1774,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2081,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -2119,7 +2103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -2167,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2187,7 +2171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2531,7 +2515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2844,7 +2828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -3155,9 +3139,355 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   age_above_60  age_above_60_hypertension  age_above_60_heart_disease  \\\n",
+      "0             0                          0                           0   \n",
+      "1             1                          1                           0   \n",
+      "2             0                          0                           0   \n",
+      "3             0                          0                           0   \n",
+      "4             0                          0                           0   \n",
+      "\n",
+      "   hypertension_former_smoker bmi_category glucose_category  \n",
+      "0                           0        obese           normal  \n",
+      "1                           0        obese         diabetic  \n",
+      "2                           0       normal           normal  \n",
+      "3                           0   overweight           normal  \n",
+      "4                           0   overweight         diabetic  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>hypertension</th>\n",
+       "      <th>heart_disease</th>\n",
+       "      <th>avg_glucose_level</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>smoking_status_formerly smoked</th>\n",
+       "      <th>stroke</th>\n",
+       "      <th>ever_married</th>\n",
+       "      <th>residence_type</th>\n",
+       "      <th>work_type_self_employed</th>\n",
+       "      <th>age_above_60</th>\n",
+       "      <th>age_above_60_hypertension</th>\n",
+       "      <th>age_above_60_heart_disease</th>\n",
+       "      <th>hypertension_former_smoker</th>\n",
+       "      <th>bmi_category</th>\n",
+       "      <th>glucose_category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>63.60</td>\n",
+       "      <td>33.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>obese</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>75</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>215.17</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>obese</td>\n",
+       "      <td>diabetic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>135.22</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>47</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>64.89</td>\n",
+       "      <td>28.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>overweight</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>49</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>222.34</td>\n",
+       "      <td>28.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>overweight</td>\n",
+       "      <td>diabetic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33545</th>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>109.80</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>underweight</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33546</th>\n",
+       "      <td>47</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>88.61</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>obese</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33547</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>89.68</td>\n",
+       "      <td>16.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>underweight</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33548</th>\n",
+       "      <td>56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>82.44</td>\n",
+       "      <td>27.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>overweight</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33549</th>\n",
+       "      <td>64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>90.11</td>\n",
+       "      <td>30.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>obese</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>33544 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       age  hypertension  heart_disease  avg_glucose_level   bmi  \\\n",
+       "0       30             0              0              63.60  33.3   \n",
+       "1       75             1              0             215.17  48.0   \n",
+       "2       15             0              0             135.22  19.0   \n",
+       "3       47             0              0              64.89  28.2   \n",
+       "4       49             0              0             222.34  28.8   \n",
+       "...    ...           ...            ...                ...   ...   \n",
+       "33545    9             0              0             109.80  14.5   \n",
+       "33546   47             0              0              88.61  30.8   \n",
+       "33547    3             0              0              89.68  16.2   \n",
+       "33548   56             1              0              82.44  27.8   \n",
+       "33549   64             0              0              90.11  30.2   \n",
+       "\n",
+       "       smoking_status_formerly smoked  stroke  ever_married  residence_type  \\\n",
+       "0                                   0       0             0               0   \n",
+       "1                                   0       0             1               0   \n",
+       "2                                   0       0             0               0   \n",
+       "3                                   0       0             1               1   \n",
+       "4                                   1       0             1               0   \n",
+       "...                               ...     ...           ...             ...   \n",
+       "33545                               0       0             0               0   \n",
+       "33546                               0       0             1               1   \n",
+       "33547                               0       0             0               0   \n",
+       "33548                               0       0             1               1   \n",
+       "33549                               0       0             1               0   \n",
+       "\n",
+       "       work_type_self_employed  age_above_60  age_above_60_hypertension  \\\n",
+       "0                            0             0                          0   \n",
+       "1                            1             1                          1   \n",
+       "2                            0             0                          0   \n",
+       "3                            1             0                          0   \n",
+       "4                            1             0                          0   \n",
+       "...                        ...           ...                        ...   \n",
+       "33545                        0             0                          0   \n",
+       "33546                        0             0                          0   \n",
+       "33547                        0             0                          0   \n",
+       "33548                        0             0                          0   \n",
+       "33549                        0             1                          0   \n",
+       "\n",
+       "       age_above_60_heart_disease  hypertension_former_smoker bmi_category  \\\n",
+       "0                               0                           0        obese   \n",
+       "1                               0                           0        obese   \n",
+       "2                               0                           0       normal   \n",
+       "3                               0                           0   overweight   \n",
+       "4                               0                           0   overweight   \n",
+       "...                           ...                         ...          ...   \n",
+       "33545                           0                           0  underweight   \n",
+       "33546                           0                           0        obese   \n",
+       "33547                           0                           0  underweight   \n",
+       "33548                           0                           0   overweight   \n",
+       "33549                           0                           0        obese   \n",
+       "\n",
+       "      glucose_category  \n",
+       "0               normal  \n",
+       "1             diabetic  \n",
+       "2               normal  \n",
+       "3               normal  \n",
+       "4             diabetic  \n",
+       "...                ...  \n",
+       "33545           normal  \n",
+       "33546           normal  \n",
+       "33547           normal  \n",
+       "33548           normal  \n",
+       "33549           normal  \n",
+       "\n",
+       "[33544 rows x 16 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 1. Binary Age Feature (age > 60)\n",
     "df['age_above_60'] = df['age'].apply(lambda x: 1 if x > 60 else 0)\n",
