feat: add hi message

--- a/assignment1_v1.ipynb
+++ b/assignment1_v1.ipynb
@@ -3539,7 +3539,9 @@
     "\n",
     "\n",
     "print(df[['age_above_60', 'age_above_60_hypertension', 'age_above_60_heart_disease', 'hypertension_former_smoker', 'bmi_category', 'glucose_category']].head())\n",
-    "display(df)\n"
+    "display(df)\n",
+    "\n",
+    "print('Hi!')\n"
    ]
   }
  ],
