feat: add SMOTE/Knn (first try = classic SMOTE)

--- a/assignment1_v1.ipynb
+++ b/assignment1_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "max           281.590000     97.600000      1.000000  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1428,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1542,7 +1542,7 @@
        "1           0.898230        0.526549                 0.345133  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1581,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1590,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1769,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2076,7 +2076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2114,7 +2114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2162,7 +2162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2182,7 +2182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2526,7 +2526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2839,7 +2839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -3150,7 +3150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -3540,6 +3540,207 @@
     "\n",
     "print(df[['age_above_60', 'age_above_60_hypertension', 'age_above_60_heart_disease', 'hypertension_former_smoker', 'bmi_category', 'glucose_category']].head())\n",
     "display(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   age  hypertension  heart_disease  avg_glucose_level   bmi  \\\n",
+      "0   30             0              0              63.60  33.3   \n",
+      "1   75             1              0             215.17  48.0   \n",
+      "2   15             0              0             135.22  19.0   \n",
+      "3   47             0              0              64.89  28.2   \n",
+      "4   49             0              0             222.34  28.8   \n",
+      "\n",
+      "   smoking_status_formerly smoked  stroke  ever_married  residence_type  \\\n",
+      "0                               0       0             0               0   \n",
+      "1                               0       0             1               0   \n",
+      "2                               0       0             0               0   \n",
+      "3                               0       0             1               1   \n",
+      "4                               1       0             1               0   \n",
+      "\n",
+      "   work_type_self_employed  age_above_60  age_above_60_hypertension  \\\n",
+      "0                        0             0                          0   \n",
+      "1                        1             1                          1   \n",
+      "2                        0             0                          0   \n",
+      "3                        1             0                          0   \n",
+      "4                        1             0                          0   \n",
+      "\n",
+      "   age_above_60_heart_disease  hypertension_former_smoker bmi_category  \\\n",
+      "0                           0                           0        obese   \n",
+      "1                           0                           0        obese   \n",
+      "2                           0                           0       normal   \n",
+      "3                           0                           0   overweight   \n",
+      "4                           0                           0   overweight   \n",
+      "\n",
+      "  glucose_category  \n",
+      "0           normal  \n",
+      "1         diabetic  \n",
+      "2           normal  \n",
+      "3           normal  \n",
+      "4         diabetic  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.head(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because our data of patients, that have a stroke is a minority in our dataset, we will try using SMOTE (Synthetic Minority Over-sampling) to handle the imbalance of the data. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique values in glucose_category:\n",
+      "['normal' 'diabetic' 'prediabetic']\n",
+      "\n",
+      "Unique values in bmi_category:\n",
+      "['obese' 'normal' 'overweight' 'underweight']\n",
+      "\n",
+      "age                                 int64\n",
+      "hypertension                        int64\n",
+      "heart_disease                       int64\n",
+      "avg_glucose_level                 float64\n",
+      "bmi                               float64\n",
+      "smoking_status_formerly smoked      int64\n",
+      "ever_married                        int64\n",
+      "residence_type                      int64\n",
+      "work_type_self_employed             int64\n",
+      "age_above_60                        int64\n",
+      "age_above_60_hypertension           int64\n",
+      "age_above_60_heart_disease          int64\n",
+      "hypertension_former_smoker          int64\n",
+      "glucose_category_encoded            int64\n",
+      "bmi_category_encoded                int64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "categorical_cols = ['glucose_category', 'bmi_category']\n",
+    "\n",
+    "# Check unique values for each categorical column\n",
+    "for col in categorical_cols:\n",
+    "    print(f\"Unique values in {col}:\\n{df[col].unique()}\\n\")\n",
+    "\n",
+    "glucose_mapping = {\n",
+    "    'normal': 0,\n",
+    "    'prediabetic': 1,\n",
+    "    'diabetic': 2\n",
+    "}\n",
+    "\n",
+    "df['glucose_category_encoded'] = df['glucose_category'].map(glucose_mapping)\n",
+    "\n",
+    "bmi_mapping = {\n",
+    "    'underweight': 0,\n",
+    "    'normal': 1,\n",
+    "    'overweight': 2,\n",
+    "    'obese': 3\n",
+    "}\n",
+    "\n",
+    "df['bmi_category_encoded'] = df['bmi_category'].map(bmi_mapping)\n",
+    "\n",
+    "df.drop(['bmi_category', 'glucose_category'], axis=1, inplace=True)\n",
+    "\n",
+    "\n",
+    "X = df.drop('stroke', axis=1)\n",
+    "y = df['stroke']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42, stratify=y)\n",
+    "\n",
+    "print(X_train.dtypes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original stroke class distribution in training set:\n",
+      " 0    23118\n",
+      "1      362\n",
+      "Name: stroke, dtype: int64\n",
+      "SMOTE stroke class distribution in training set:\n",
+      " 0    23118\n",
+      "1     5779\n",
+      "Name: stroke, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "\n",
+    "smote = SMOTE(sampling_strategy=0.05, random_state=42)\n",
+    "X_train_smote, y_train_smote = smote.fit_resample(X_train, y_train)\n",
+    "\n",
+    "print(\"Original stroke class distribution in training set:\\n\", y_train.value_counts())\n",
+    "print(\"SMOTE stroke class distribution in training set:\\n\", y_train_smote.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      0.93      0.96      9909\n",
+      "           1       0.04      0.17      0.06       155\n",
+      "\n",
+      "    accuracy                           0.92     10064\n",
+      "   macro avg       0.51      0.55      0.51     10064\n",
+      "weighted avg       0.97      0.92      0.95     10064\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Scale the features\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# Fit the data\n",
+    "X_train_smote_scaled = scaler.fit_transform(X_train_smote)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=5)\n",
+    "knn.fit(X_train_smote_scaled, y_train_smote)\n",
+    "\n",
+    "# Predict\n",
+    "y_pred = knn.predict(X_test_scaled)\n",
+    "\n",
+    "# Evaluate model performance\n",
+    "print(classification_report(y_test, y_pred))\n"
    ]
   }
  ],
